test/spec_vectors/simd_i32x4_extmul_i16x8/fail/module_3.wat
(module (func (result v128) (i32x4.extmul_low_i16x8_u (i32.const 0) (f32.const 0.0))))